Fixed height and removed scrollbar for dropdowns in access and result

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -2998,8 +2998,7 @@ span.arrow {
 .dropdown-list-container {
   padding: 8px;
   width: 300px;
-  height: 300px;
-  overflow-y: scroll;
+  height: auto;
   font-size: 12px;
   display: none;
   position: absolute;
